# code-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/code_agent/: __init__.py  agent.py  cli.py  client.py  config.py  types.py
src/code_agent/context/: __init__.py  manager.py  prompt.py
src/code_agent/memory/: store.py
src/code_agent/planning/: __init__.py
src/code_agent/subagent/: spawner.py
src/code_agent/tools/: ask_user.py  delegate.py  glob_tool.py  grep_tool.py
src/python/code_agent/: __init__.py  cli.py  client.py  config.py  ui.py
src/python/code_agent/context/: manager.py
src/python/code_agent/memory/: __init__.py
src/python/code_agent/planning/: planner.py
src/python/code_agent/subagent/: __init__.py
src/python/code_agent/tools/: __init__.py  base.py  delegate.py  file_read.py  file_write.py  git.py  shell.py
