[project]
name = "code-agent"
version = "0.1.0"
description = "A Python coding agent powered by Claude API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.52.0",
]

[project.scripts]
code-agent = "code_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_agent"]
