[project]
name = "code-agent"
version = "0.1.1"
description = "A Python coding agent with pluggable model providers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.52.0",
    "google-genai>=1.14.0",
    "huggingface-hub>=1.11.0",
    "lmstudio>=1.5.0",
    "mcp>=1.27.0",
    "ollama>=0.6.1",
    "openai>=1.78.0",
    "rich>=13.7.0",
]

[project.scripts]
code-agent = "code_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_agent"]
